# languagechange

./: pyproject.toml
languagechange/: benchmark.py  cache.py  corpora.py  logging.py  resource_manager.py  usages.py
languagechange/models/change/: timeseries.py
languagechange/models/representation/: alignment.py  contextualized.py  definition.py  prompting.py  static.py
languagechange/models/type/: type_classification.py
